--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -60,11 +60,20 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="collections\Genre.cs" />
+    <Compile Include="collections\IsInGenre.cs" />
+    <Compile Include="collections\IsPublishedBy.cs" />
     <Compile Include="collections\Movie.cs" />
     <Compile Include="collections\CriteriaFor.cs" />
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
+    <Compile Include="utility\AndCriteria.cs" />
+    <Compile Include="utility\AnonymousCriteria.cs" />
+    <Compile Include="utility\BinaryCriteria.cs" />
+    <Compile Include="utility\Criteria.cs" />
+    <Compile Include="utility\CriteriaExtensions.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
+    <Compile Include="utility\NotCriteria.cs" />
+    <Compile Include="utility\OrCriteria.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
