--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -77,6 +77,7 @@
     <Compile Include="utility\OrCriteria.cs" />
     <Compile Include="utility\PropertyAccessor.cs" />
     <Compile Include="utility\Where.cs" />
+    <Compile Include="utility\CriteriaFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
