--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -60,26 +60,31 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="collections\Genre.cs" />
-    <Compile Include="collections\IsInGenre.cs" />
-    <Compile Include="collections\IsPublishedBy.cs" />
+    <Compile Include="collections\LazyEnumerable.cs" />
     <Compile Include="collections\Movie.cs" />
     <Compile Include="collections\CriteriaFor.cs" />
     <Compile Include="collections\MovieLibrary.cs" />
     <Compile Include="collections\ProductionStudio.cs" />
-    <Compile Include="utility\AndCriteria.cs" />
-    <Compile Include="utility\AnonymousCriteria.cs" />
-    <Compile Include="utility\BinaryCriteria.cs" />
-    <Compile Include="utility\ComparableCriteriaFactory.cs" />
-    <Compile Include="utility\Criteria.cs" />
-    <Compile Include="utility\CriteriaExtensions.cs" />
-    <Compile Include="utility\CriteriaFactory.cs" />
+    <Compile Include="utility\filtering\AndCriteria.cs" />
+    <Compile Include="utility\filtering\AnonymousCriteria.cs" />
+    <Compile Include="utility\filtering\BinaryCriteria.cs" />
+    <Compile Include="utility\filtering\ComparableCriteriaFactory.cs" />
+    <Compile Include="utility\filtering\Criteria.cs" />
+    <Compile Include="utility\filtering\CriteriaExtensions.cs" />
+    <Compile Include="utility\filtering\CriteriaFactory.cs" />
     <Compile Include="utility\EnumerableExtensions.cs" />
+    <Compile Include="utility\filtering\EqualToAny.cs" />
+    <Compile Include="utility\filtering\FallsInRange.cs" />
     <Compile Include="utility\FuncExtensions.cs" />
-    <Compile Include="utility\NotCriteria.cs" />
-    <Compile Include="utility\OrCriteria.cs" />
-    <Compile Include="utility\PropertyAccessor.cs" />
-    <Compile Include="utility\Where.cs" />
-    <Compile Include="utility\BasicCriteriaFactory.cs" />
+    <Compile Include="utility\filtering\NotCriteria.cs" />
+    <Compile Include="utility\filtering\OrCriteria.cs" />
+    <Compile Include="utility\filtering\PropertyAccessor.cs" />
+    <Compile Include="utility\filtering\PropertyCriteria.cs" />
+    <Compile Include="utility\filtering\Where.cs" />
+    <Compile Include="utility\filtering\BasicCriteriaFactory.cs" />
+    <Compile Include="utility\ranges\ExclusiveRangeWithNoUpperBound.cs" />
+    <Compile Include="utility\ranges\InclusiveRange.cs" />
+    <Compile Include="utility\ranges\Range.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
