--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -87,6 +87,8 @@
     <Compile Include="utility\ranges\InclusiveRange.cs" />
     <Compile Include="utility\ranges\Range.cs" />
     <Compile Include="utility\sorting\ChainedComparer.cs" />
+    <Compile Include="utility\sorting\Compare.cs" />
+    <Compile Include="utility\sorting\CompareFactory.cs" />
     <Compile Include="utility\sorting\ComparerExtensions.cs" />
     <Compile Include="utility\sorting\ReverseComparer.cs" />
   </ItemGroup>
