--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -89,7 +89,7 @@
     <Compile Include="utility\sorting\Compare.cs" />
     <Compile Include="utility\sorting\ComparerExtensions.cs" />
     <Compile Include="utility\sorting\ComparablePropertyComparer.cs" />
-    <Compile Include="utility\sorting\RankedPropertyComparer.cs" />
+    <Compile Include="utility\sorting\FixedPropertyComparer.cs" />
     <Compile Include="utility\sorting\ReverseComparer.cs" />
   </ItemGroup>
   <ItemGroup>
