--- a/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
+++ b/exercise_to_complete_for_day_1/product/nothinbutdotnetprep/nothinbutdotnetprep.csproj
@@ -87,9 +87,11 @@
     <Compile Include="utility\ranges\Range.cs" />
     <Compile Include="utility\sorting\ChainedComparer.cs" />
     <Compile Include="utility\sorting\ComparerBuilder.cs" />
-    <Compile Include="utility\sorting\ComparablePropertyComparer.cs" />
+    <Compile Include="utility\sorting\ComparableComparer.cs" />
     <Compile Include="utility\sorting\FixedPropertyComparer.cs" />
+    <Compile Include="utility\sorting\PropertyComparer.cs" />
     <Compile Include="utility\sorting\ReverseComparer.cs" />
+    <Compile Include="utility\sorting\SortingEnumerable.cs" />
   </ItemGroup>
   <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
